# barycenter

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  RELEASE.md  config.toml  docker-compose.yml  users.json.example
.claude/: settings.local.json
.config/: nextest.toml
.github/workflows/: ci.yml  docs.yml  release.yml
book/: book.toml  mermaid-init.js
book/src/: README.md  SUMMARY.md
book/src/admin/: available-jobs.md  background-jobs.md  creating-users.md  entity-crud.md  graphql-api.md  job-management.md  job-monitoring.md  job-scheduling.md  passkey-management.md  playground.md  public-registration.md  user-2fa.md  user-management.md  user-sync.md
book/src/authentication/: 2fa-admin-enforced.md  2fa-context-based.md  2fa-flow.md  2fa-user-optional.md  amr-acr.md  conditional-ui.md  consent.md  passkey-authentication.md  passkey-registration.md  passkeys-how.md  passkeys.md  password.md  session-lifecycle.md  sessions.md  two-factor.md
book/src/authz/: abac-rules.md  configuration.md  grants-tuples.md  kdl-policy-language.md  overview.md  resources-permissions.md  rest-api.md  roles-inheritance.md
book/src/deployment/: backup-recovery.md  docker-compose.md  docker.md  freebsd.md  gateway-api.md  helm-ingress.md  helm-values.md  illumos-smf.md  k8s-authz-policies.md  k8s-user-sync.md  kubernetes-helm.md  production-checklist.md  reverse-proxy-tls.md  systemd.md
book/src/development/: architecture.md  building.md  contributing.md  database-schema.md  error-handling.md  module-structure.md  release-process.md  testing.md  wasm-client.md
book/src/federation/: identity-mapping.md  overview.md  peering-guide.md  security-considerations.md  setting-up-webfingerd.md
book/src/getting-started/: architecture.md  building-from-source.md  config-file.md  configuration.md  database-setup.md  docker.md  env-variables.md  installation.md  key-concepts.md  overview.md  prerequisites.md  quickstart.md
book/src/oidc/: authorization-code-flow.md  client-authentication.md  client-registration.md  discovery-jwks.md  grant-authorization-code.md  grant-device-authorization.md  grant-refresh-token.md  id-token.md  token-endpoint.md  token-revocation.md  userinfo.md
book/src/reference/: api-endpoints.md  configuration.md  database-schema.md  glossary.md  oidc-conformance.md
book/src/security/: hardening.md  headers.md  pkce.md  rate-limiting.md  security-model.md  session-security.md
client-wasm/: Cargo.toml
client-wasm/src/: lib.rs
deploy/freebsd/: README.md  barycenter
deploy/helm/barycenter/: Chart.yaml  README.md  values.yaml
deploy/helm/barycenter/examples/: user-sync-secret.yaml
deploy/helm/barycenter/templates/: NOTES.txt  _helpers.tpl  authz-networkpolicy.yaml  authz-policies-configmap.yaml  configmap.yaml  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
deploy/illumos/: README.md  barycenter.xml
deploy/systemd/: README.md  barycenter.service
docs/: Cloud Policy Verification Service Design.txt  flows.md  kubernetes-deployment.md  next-iteration-plan.md  oidc-conformance.md
migration/: Cargo.toml
migration/src/: lib.rs  m20250101_000001_initial_schema.rs  m20250107_000001_add_passkeys.rs  m20250107_000002_extend_sessions_users.rs  m20250108_000001_add_consent_table.rs  m20250109_000001_add_device_codes.rs  m20250222_000001_rename_device_code_table.rs  m20260407_000001_create_federation_tables.rs  m20260407_000002_create_peer_requests.rs
scripts/: validate-oidc.sh
src/: admin_graphql.rs  admin_mutations.rs  errors.rs  jobs.rs  jwks.rs  lib.rs  main.rs  session.rs  settings.rs  storage.rs  user_sync.rs  web.rs  webauthn_manager.rs
src/authz/: condition.rs  engine.rs  errors.rs  loader.rs  mod.rs  policy.rs  types.rs  web.rs
src/entities/: access_token.rs  auth_code.rs  client.rs  consent.rs  device_code.rs  federated_identity.rs  federation_auth_request.rs  job_execution.rs  mod.rs  passkey.rs  peer_request.rs  property.rs  refresh_token.rs  session.rs  trusted_peer.rs  user.rs  webauthn_challenge.rs
src/federation/: entity_proof.rs  identity.rs  mod.rs  peering.rs  registration.rs  rp_client.rs  storage.rs  verification.rs  webfinger.rs
static/: consent.html
tests/: federation_test.rs  integration_test.rs  test_passkey_counter.rs
tests/helpers/: builders.rs  db.rs  mock_webauthn.rs  mod.rs  webauthn_fixtures.rs
tests/tools/: README.md  capture_webauthn_fixture.html
