[package]
name = "barycenter-webauthn-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "CredentialsContainer",
    "PublicKeyCredential",
    "PublicKeyCredentialCreationOptions",
    "PublicKeyCredentialRequestOptions",
    "AuthenticatorAttestationResponse",
    "AuthenticatorAssertionResponse",
    "AuthenticatorResponse",
    "Credential",
    "CredentialCreationOptions",
    "CredentialRequestOptions",
] }
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
