[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls"] }

[dependencies.sea-orm]
version = "1"
features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros"]
default-features = false
